[gd_scene format=3 uid="uid://b8y7g6h5j4k3"]

[ext_resource type="Script" path="res://scripts/ui/InGameMenu.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_modal"]
bg_color = Color(0.08, 0.08, 0.1, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.2, 0.25, 1)
corner_radius_all = 8

[node name="InGameMenu" type="CanvasLayer"]
process_mode = 3
layer = 10
script = ExtResource("1_script")

[node name="Dimmer" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.4)

[node name="MenuPanel" type="Panel" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 400)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_modal")

[node name="VBox" type="VBoxContainer" parent="MenuPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Title" type="Label" parent="MenuPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "PAUSED"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MenuPanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ResumeBtn" type="Button" parent="MenuPanel/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "RESUME"

[node name="SaveExitBtn" type="Button" parent="MenuPanel/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "SAVE AND EXIT"

[node name="AbandonBtn" type="Button" parent="MenuPanel/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.9, 0.3, 0.3, 1)
text = "ABANDON RUN"

[node name="ConfirmationDialog" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(350, 200)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_modal")

[node name="VBox" type="VBoxContainer" parent="ConfirmationDialog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ConfirmLabel" type="Label" parent="ConfirmationDialog/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Are you sure?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBox" type="HBoxContainer" parent="ConfirmationDialog/VBox"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="YesBtn" type="Button" parent="ConfirmationDialog/VBox/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "YES"

[node name="NoBtn" type="Button" parent="ConfirmationDialog/VBox/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "NO"